--- a/aml_config/config.json
+++ b/aml_config/config.json
@@ -2,5 +2,5 @@
     "subscription_id": "d415db21-8de5-451e-8ad9-d0ac4d1789a3",
     "resource_group": "MLOps",
     "workspace_name": "MLOpsDemo",
-    "location": "westeurope"
+    "location": "eastus"
 }
